@@ -28,6 +28,7 @@ Here is a summary of the main changes in this release (see handbook for full det
 	* mtPaint can now be compiled as a library (libmtpaint)
 	* Main menu now rearranges itself to fit in window
 	* Image rotation now sharper and faster
+	* XPM files with up to 4096 colours can now be saved and loaded as RGB images
 	* BUGFIX - Colour selective mode with zoom < 100% doesn't cause crash
 	* BUGFIX - Gradient preview now properly shows effect of mask channel
 	* BUGFIX - "Resize Canvas" with negative offset now works correctly
